/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package co.edu.udec.poo.ComedorInfantil.modeloentidades;

import java.util.Date;
import java.util.List;
import co.edu.udec.poo.ComedorInfantil.modeloentidades.Ninos;

/**
 *
 * @author Navid Lobato
 */
public class AdminComidas {

    private List<Ninos> Niños;
    
    public List<String> Historial(Ninos niño,Date FechaInicio,Date FechaFin){
        List<String> Historial = null;
        return Historial;
    }
   public List<Ninos> ListarUltimaSemana(){
        
       return Niños;
   }
    public List<Ninos> BuscarMasConsumo(){
       return Niños;
    }
    public List<Ninos> ListarMasAsistencia(){
        return Niños;
    }
}
